[tool.poetry]
name = "adaptive-financial-risk-intelligence-engine"
version = "0.1.0"
description = "MLOps project for transaction fraud detection"
authors = ["Abhishek <abhishekprajapati2619@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --maxfail=2 --disable-warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
